# notion-finances-rust

./: .env.example  Cargo.toml
src/: main.rs
